--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,9 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.4",
     "cors": "^2.8.5",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.5.28",
+    "pdfmake": "^0.2.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
